--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -29,9 +29,7 @@ jobs:
       - name: deploy FTP
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
        # run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
